# paniq-rs

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile.test-install  LATENCY_REVIEW.md  Makefile  README.md  test-e2e.sh
.github/workflows/: ci.yml  release.yml
docs/: KCP_TEST_INVESTIGATION.md  LOGGING.md  QUIC_TEST_INVESTIGATION.md  TESTING.md  acceptance-status.md  go-parity-roadmap.md  go-vs-rust-differences.md  kcp-migration-plan.md  kcp-transport-wrapper.md  paniq-rs-implementation-plan.md  protocol.md
docs/examples/: paniq-rs-proxy.json
examples/: README.md  dump_vectors.rs  echo.rs  ffi_usage.rs  minimal_profile.json  paniq-proxy.json  paniq-socks.json  profile.json  proxy-server.json  socks5d.json
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: chain_parser.rs  frame_decoder.rs  lib.rs  main.rs  payload_decoder.rs  replay_cache.rs
obf-parity/: vectors.json
scripts/: install-debian.sh  paniq-rs-install.sh  pre-push
src/: check_fast.rs  client.rs  config.rs  control.rs  ffi.rs  io.rs  lib.rs  profile.rs  proxy_protocol.rs  telemetry.rs
src/envelope/: client.rs  enc_timestamp.rs  mac1.rs  mod.rs  padding.rs  replay.rs  server.rs  tests.rs  transport.rs
src/kcp/: client.rs  common.rs  kcp_tokio.rs  mod.rs  mux.rs  server.rs  transport.rs
src/obf/: chain.rs  config.rs  framer.rs  header.rs  headers.rs  mod.rs  obf_bytes.rs  obf_data.rs  obf_datasize.rs  obf_datastring.rs  obf_rand.rs  obf_randchars.rs  obf_randdigits.rs  obf_timestamp.rs  tests.rs
src/profile/: cbor.rs
src/quic/: client.rs  common.rs  mod.rs  server.rs
src/runtime/: mod.rs  proxy.rs  socks.rs
src/socks5/: mod.rs
systemd/: paniq-rs-proxy.service
tests/: benchmark_transfer.rs  go_parity.rs  golden_vectors.rs  integration_socks5_kcp.rs  integration_socks5_quic.rs  integration_socks5_realistic.rs  integration_socks5_udp.rs  kcp_roundtrip.rs  profile_benchmark.rs  quic_handshake.rs  quic_roundtrip.rs  sdk_usage.rs  test-e2e.sh  transport_padding_metrics.rs
tests/support/: harness.rs  mod.rs
