[package]
name = "paniq"
version = "0.1.0"
edition = "2021"

[lib]
name = "paniq"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
required-features = ["mobile"]

[dependencies]
rand = "0.8"
getrandom = "0.2"
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"
blake2 = { version = "0.10" }
chacha20poly1305 = { version = "0.10", features = ["std"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
subtle = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
async-trait = { version = "0.1", optional = true }
once_cell = "1.19"
fast-socks5 = "0.10.0"
pico-args = "0.5"
kcp-rs = { version = "0.2.4", optional = true }
kcp-tokio = { version = "0.3", optional = true }
async_smux = { version = "0.3.4", optional = true }
bytes = { version = "1.11.0" }
futures = { version = "0.3.31" }
tokio-util = { version = "0.7", optional = true }
bincode = "1.3"
tempfile = { version = "3", optional = true }
uniffi = { version = "0.28", features = ["tokio", "cli"], optional = true }
uniffi_macros = { version = "0.28", optional = true }

[features]
default = []
kcp = [
    "tokio",
    "dep:tracing-subscriber",
    "kcp-rs",
    "kcp-tokio",
    "async_smux",
    "tokio-util",
]
socks5 = ["tokio", "dep:tracing-subscriber", "async-trait"]
mobile = ["kcp", "socks5", "dep:uniffi", "dep:uniffi_macros"]

[dev-dependencies]
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.35", features = ["full"] }
tempfile = "3"

[[bin]]
name = "socks5d"
path = "bin/socks5d.rs"
required-features = ["socks5", "kcp"]

[[bin]]
name = "paniq-ctl"
path = "bin/paniq-ctl.rs"
required-features = ["socks5"]

[[bin]]
name = "proxy-server"
path = "bin/proxy-server.rs"
required-features = ["kcp"]

[[bin]]
name = "gen_test_cert"
path = "bin/gen_test_cert.rs"
required-features = []

[patch.crates-io]
kcp-tokio = { git = "https://github.com/bridgefall/rust-kcp", branch = "fix-ack-window" }
