[package]
name = "paniq-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
paniq = { path = ".." }
rand = "0.8"
rand_chacha = "0.3"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "main"
path = "fuzz_targets/main.rs"

[[bin]]
name = "chain_parser"
path = "fuzz_targets/chain_parser.rs"

[[bin]]
name = "frame_decoder"
path = "fuzz_targets/frame_decoder.rs"

[[bin]]
name = "payload_decoder"
path = "fuzz_targets/payload_decoder.rs"

[[bin]]
name = "replay_cache"
path = "fuzz_targets/replay_cache.rs"
